--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 language: python
 python: 2.7
-install: "pip install git+https://github.com/lektor/lektor#egg=Lektor"
+install:
+  - "pip install -U pip"
+  - "pip install git+https://github.com/lektor/lektor#egg=Lektor"
 script: "lektor build && lektor deploy production"
 cache:
   directories:
