--- a/webpack/package.json
+++ b/webpack/package.json
@@ -19,6 +19,7 @@
     "node-sass": "^3.4.2",
     "sass-loader": "^3.1.1",
     "style-loader": "^0.8.3",
+    "query-string": "^3.0.0",
     "url-loader": "^0.5.6",
     "webpack": "^1.12.6",
     "font-awesome": "^4.5.0"
