--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,9 @@ python: 2.7
 install:
   - "pip install -U pip"
   - "pip install git+https://github.com/lektor/lektor#egg=Lektor"
-script: "lektor build && lektor deploy production"
+script:
+  - "lektor build"
+  - "if [ ! -z \"$LEKTOR_DEPLOY_KEY\" ]; then lektor deploy production; fi"
 cache:
   directories:
     - $HOME/.cache/pip
