--- a/.travis.yml
+++ b/.travis.yml
@@ -12,3 +12,8 @@ cache:
     - $HOME/.cache/lektor/builds
 addons:
   ssh_known_hosts: flow.srv.pocoo.org
+
+notifications:
+  webhooks:
+    urls:
+      - https://webhooks.gitter.im/e/f0c538cdfc9883f81e34
