Added publisher docs

--- a/models/doc-page.ini
+++ b/models/doc-page.ini
@@ -57,3 +57,7 @@ description = An optional signature for a type.
 label = Template Variable
 type = string
 description = An optional template variable if it exists there as such.
+
+[fields.version_added]
+label = Added in version
+type = string
