--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ install:
   - "pip install git+https://github.com/lektor/lektor#egg=Lektor"
 script:
   - "lektor build"
-  - "if [ ! -z \"$LEKTOR_DEPLOY_KEY\" ] && [ \"$TRAVIS_PULL_REQUEST\" == \"false\" ] && [ \"$TRAVIS_BRANCH\" == \"master\" ]; then lektor deploy production; fi"
+  - "test \"$TRAVIS_PULL_REQUEST\" == \"false\" && test \"$TRAVIS_BRANCH\" == \"master\" && lektor deploy production"
 cache:
   directories:
     - $HOME/.cache/pip
