Fixes for mobile

--- a/flowblocks/banner.ini
+++ b/flowblocks/banner.ini
@@ -11,8 +11,8 @@ width = 3/4
 [fields.height]
 label = Height
 type = select
-choices = 500, 300
-choice_labels = 500px, 300px
+choices = 500-tall, 500, 300
+choice_labels = 500px tall, 500px, 300px
 default = 300
 width = 1/4
 
