--- a/databags/menu.ini
+++ b/databags/menu.ini
@@ -6,6 +6,10 @@ label = Download
 path = /docs
 label = Documentation
 
+[poweredby]
+path = /showcase
+label = Showcase
+
 [blog]
 path = /blog
 label = Blog
