Added community and showcase header

--- a/databags/menu.ini
+++ b/databags/menu.ini
@@ -10,6 +10,10 @@ label = Documentation
 path = /showcase
 label = Showcase
 
+[community]
+path = /community
+label = Community
+
 [blog]
 path = /blog
 label = Blog
