Spin off the lektor-atom plugin.

--- a/models/blog.ini
+++ b/models/blog.ini
@@ -3,6 +3,9 @@ name = Blog
 label = Blog
 hidden = yes
 
+[fields.summary]
+type = string
+
 [children]
 model = blog-post
 order_by = -pub_date, title
