--- a/webpack/package.json
+++ b/webpack/package.json
@@ -6,22 +6,23 @@
   "main": "static/gen/host.js",
   "scripts": {},
   "devDependencies": {
-    "babel": "^5.8.23",
-    "babel-core": "^5.8.23",
-    "babel-eslint": "^4.1.1",
-    "babel-loader": "^5.3.2",
-    "bootstrap": "^3.3.5",
-    "bootstrap-sass": "^3.3.5",
-    "css-loader": "^0.9.1",
-    "extract-text-webpack-plugin": "^0.9.1",
-    "file-loader": "^0.8.1",
-    "jquery": "^2.1.4",
-    "node-sass": "^3.4.2",
-    "sass-loader": "^3.1.1",
-    "style-loader": "^0.8.3",
-    "query-string": "^3.0.0",
-    "url-loader": "^0.5.6",
-    "webpack": "^1.12.6",
-    "font-awesome": "^4.5.0"
+    "babel": "^6.5.2",
+    "babel-core": "^6.11.4",
+    "babel-eslint": "^6.1.2",
+    "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.9.0",
+    "bootstrap": "^3.3.6",
+    "bootstrap-sass": "^3.3.6",
+    "css-loader": "^0.23.1",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "^0.9.0",
+    "jquery": "^3.1.0",
+    "node-sass": "^3.8.0",
+    "sass-loader": "^4.0.0",
+    "style-loader": "^0.13.1",
+    "query-string": "^4.2.2",
+    "url-loader": "^0.5.7",
+    "webpack": "^1.13.1",
+    "font-awesome": "^4.6.3"
   }
 }
