--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,6 @@
 language: python
-python: 3.5
+python: 3.7
+env: TRAVIS_NODE_VERSION=10
 install:
   - "pip install -U pip"
   - "pip install git+https://github.com/lektor/lektor#egg=Lektor"
