--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,9 @@
 language: python
 python: 3.7
 env: TRAVIS_NODE_VERSION=10
+branches:
+  only:
+    - master
 install:
   - "pip install -U pip"
   - "pip install git+https://github.com/lektor/lektor#egg=Lektor"
