Added themes pages

--- a/databags/menu.ini
+++ b/databags/menu.ini
@@ -14,9 +14,9 @@ label = Showcase
 path = /plugins
 label = Plugins
 
-# [themes]
-# path = /themes
-# label = Themes
+[themes]
+path = /themes
+label = Themes
 
 [community]
 path = /community
