[lektor-website-197] Removing single option for children models of the plugins page.

--- a/models/plugins.ini
+++ b/models/plugins.ini
@@ -3,5 +3,6 @@ name = Plugins
 inherits = page
 label = {{ this.title }}
 
-[children]
-model = plugin
+# Re-enable after being able to specify 2 models choices instead of only one
+# [children]
+# model = plugin
