--- a/tox.ini
+++ b/tox.ini
@@ -10,3 +10,9 @@ deps =
 commands =
     lektor plugins reinstall
     lektor build
+
+[testenv:deploy]
+commands =
+    lektor plugins reinstall
+    lektor build
+    lektor deploy ghpages
