move plugins from ./packages to ./plugins
and instead of Lektor's automatic installation install them with pipenv
to get proper locking of all dependencies.

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,8 @@ assets/static/*
 !assets/static/favicon.png
 packages/*/build
 packages/*/dist
+plugins/*/build
+plugins/*/dist
 webpack/node_modules
 *~
 *#
