--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,13 +34,11 @@ jobs:
         with:
           node-version: "lts/*"
 
-      - name: Install Lektor
-        run: |
-          python -m pip install --upgrade pip setuptools
-          python -m pip install lektor
+      - run: pip install pipenv
+      - run: pipenv sync
 
       - name: Build lektor website
-        run: lektor build -f webpack -O '${{ env.OUTPUT }}'
+        run: pipenv run lektor build -f webpack -O '${{ env.OUTPUT }}'
 
       - name: Check for broken internal links
         uses: wjdp/htmltest-action@master
@@ -50,9 +48,9 @@ jobs:
           skip_external: true
           log_level: 1
 
-      - name: Deploy lektor website
+      - name: Build site and deploy
         if: env.DEPLOY == 'true'
-        run: lektor deploy -O '${{ env.OUTPUT }}' ghpages-https
+        run: pipenv run lektor deploy -O '${{ env.OUTPUT }}' ghpages-https
         env:
           LEKTOR_DEPLOY_USERNAME: lektor
           LEKTOR_DEPLOY_PASSWORD: ${{ secrets.GITHUB_TOKEN }}
