--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,7 +23,10 @@ jobs:
       - uses: actions/setup-node@v2
       - uses: actions/setup-python@v2
 
-      - run: pip install tox
+      - name: Install tox
+        run: |
+          python -m pip install --upgrade pip setuptools
+          python -m pip install tox
 
       - run: echo DEPLOY='${{ env.DEPLOY }}'
       - name: Run tox to build site
