Add trailing slashes to links that should have them

--- a/databags/menu.ini
+++ b/databags/menu.ini
@@ -1,27 +1,27 @@
 [download]
-path = /downloads
+path = /downloads/
 label = Download
 
 [docs]
-path = /docs
+path = /docs/
 label = Documentation
 
 [poweredby]
-path = /showcase
+path = /showcase/
 label = Showcase
 
 [plugins]
-path = /plugins
+path = /plugins/
 label = Plugins
 
 # [themes]
-# path = /themes
+# path = /themes/
 # label = Themes
 
 [community]
-path = /community
+path = /community/
 label = Community
 
 [blog]
-path = /blog
+path = /blog/
 label = Blog
