--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,12 +12,19 @@ on:
   schedule:
     - cron: '23 2 * * *'
 
+env:
+  DEPLOY: >-
+    ${{
+    github.event_name != 'pull_request'
+    &&
+    github.ref == 'refs/heads/master'
+    }}
+  OUTPUT: _html
+
 jobs:
-  deploy-lektor-website:
-    name: Deploy lektor website
+  build:
+    name: Build lektor website
     runs-on: ubuntu-latest
-    env:
-      DEPLOY: ${{ github.event_name != 'pull_request' }}
     steps:
       - uses: actions/checkout@v2
 
@@ -28,10 +35,20 @@ jobs:
           python -m pip install --upgrade pip setuptools
           python -m pip install lektor
 
-      - run: lektor build
+      - name: Build lektor website
+        run: lektor build -O '${{ env.OUTPUT }}'
 
-      - run: lektor deploy ghpages-https
+      - name: Check for broken internal links
+        uses: wjdp/htmltest-action@master
+        with:
+          path: ${{ env.OUTPUT }}
+          config: .htmltest.yml
+          skip_external: true
+          log_level: 1
+
+      - name: Deploy lektor website
         if: env.DEPLOY == 'true'
+        run: lektor deploy -O '${{ env.OUTPUT }}' ghpages-https
         env:
           LEKTOR_DEPLOY_USERNAME: lektor
           LEKTOR_DEPLOY_PASSWORD: ${{ secrets.GITHUB_TOKEN }}
