tox: use pipenv to install deps into virtualenv created by tox

--- a/tox.ini
+++ b/tox.ini
@@ -5,7 +5,7 @@ skipsdist = true
 
 [testenv]
 deps =
-    lektor
+    pipenv
 setenv =
     # Keep Lektor's private package cache in tox env rather than ~/.cache
     XDG_CACHE_HOME = {envdir}/cache
@@ -13,6 +13,7 @@ setenv =
 
 [testenv:build]
 commands =
+    pipenv sync
     lektor build -f webpack -O {envdir}/output
 
 [testenv:htmltest]
