--- a/tox.ini
+++ b/tox.ini
@@ -13,7 +13,7 @@ setenv =
 
 [testenv:build]
 commands =
-    lektor build -O {envdir}/output
+    lektor build -f webpack -O {envdir}/output
 
 [testenv:htmltest]
 # Build site and check links with htmltest
