feat: use PDM to manage dependencies and build site

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,10 @@
-.DS_Store
-*.pyc
-*.egg-info
-.cache
-.tox
-assets/static/*
-!assets/static/favicon.png
-packages/*/build
-packages/*/dist
-webpack/node_modules
 *~
 *#
+.DS_Store
+__pycache__/
+*.egg-info
+/assets/static/*
+!/assets/static/favicon.png
+/webpack/node_modules
+/.pdm-python
+/_htdocs/
