--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,6 +39,11 @@ jobs:
           python -m pip install --upgrade pip setuptools
           python -m pip install lektor
 
+      - name: Install Imagemagick
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y imagemagick
+
       - name: Build lektor website
         run: lektor build -f webpack -O '${{ env.OUTPUT }}'
 
