fix(build): pin setuptools<81
This is a quick and dirty fix for the [removal] of `pkg_resources`
from `setuptools`.

[removal]: https://setuptools.pypa.io/en/latest/history.html#v82-0-0

--- a/tox.ini
+++ b/tox.ini
@@ -5,6 +5,7 @@ skipsdist = true
 
 [testenv]
 deps =
+    setuptools<81
     lektor
 setenv =
     # Keep Lektor's private package cache in tox env rather than ~/.cache
