--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,7 +36,7 @@ jobs:
 
       - name: Install Lektor
         run: |
-          python -m pip install --upgrade pip setuptools
+          python -m pip install --upgrade pip 'setuptools<81'
           python -m pip install lektor
 
       - name: Install Imagemagick
