fix(tests): fix tox htmltest target

--- a/tox.ini
+++ b/tox.ini
@@ -33,6 +33,7 @@ commands_pre =
     # Install latest version of htmltest in the tox env
     bash -c '[ -f {envbindir}/htmltest ] || \
              curl -s https://htmltest.wjdp.uk | bash -s -- -b {envbindir}'
+
+depends = build
 commands =
-    {[testenv:build]commands}
-    htmltest -c .htmltest.yml {env:HTMLTEST_OPTS:-s} {envdir}/output
+    htmltest -c .htmltest.yml {env:HTMLTEST_OPTS:-s} {[testenv:build]envdir}/output
