fix: build with lektor 3.4
This obviates the need for setuptools

--- a/tox.ini
+++ b/tox.ini
@@ -5,8 +5,7 @@ skipsdist = true
 
 [testenv]
 deps =
-    setuptools<81
-    lektor
+    lektor>=3.4b12
 setenv =
     # Keep Lektor's private package cache in tox env rather than ~/.cache
     XDG_CACHE_HOME = {envdir}/cache
