fix(tox.ini): use uv to build site

--- a/tox.ini
+++ b/tox.ini
@@ -4,8 +4,7 @@ envlist = build
 skipsdist = true
 
 [testenv]
-deps =
-    lektor>=3.4b12
+deps = uv
 setenv =
     # Keep Lektor's private package cache in tox env rather than ~/.cache
     XDG_CACHE_HOME = {envdir}/cache
@@ -13,7 +12,7 @@ setenv =
 
 [testenv:build]
 commands =
-    lektor build -f webpack -O {envdir}/output
+    uv run lektor build -f webpack -O {envdir}/output
 
 [testenv:htmltest]
 # Build site and check links with htmltest
