--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,26 +26,21 @@ jobs:
     name: Build lektor website
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-python@v5
-        with:
-          python-version: "3.12"
-      - uses: actions/setup-node@v4
+      - uses: actions/checkout@v6
+      - uses: actions/setup-node@v6
         with:
           node-version: "lts/*"
-
-      - name: Install Lektor
-        run: |
-          python -m pip install --upgrade pip 'setuptools<81'
-          python -m pip install lektor
-
       - name: Install Imagemagick
         run: |
           sudo apt-get update
           sudo apt-get install -y imagemagick
+      - uses: astral-sh/setup-uv@v7
+        with:
+          version: "0.10.4"
 
+      - run: uv run python --version
       - name: Build lektor website
-        run: lektor build -f webpack -O '${{ env.OUTPUT }}'
+        run: uv run lektor build -f webpack -O '${{ env.OUTPUT }}'
 
       - name: Check for broken internal links
         uses: wjdp/htmltest-action@master
